--- a/driver.html
+++ b/driver.html
@@ -4,12 +4,12 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Booking form</title>
- <link rel="stylesheet" href="booking.css">
+ <link rel="stylesheet" href="driver.css">
 </head>
 <body>
  <div class="background">
   <div class="booking-form">
-   <h2>Book your Driver form</h2>
+   <h2>Only For Driver form</h2>
    <form action="">
     <label for="name">Full-Name</label>
     <input type="text" name="name" id="name" required>
@@ -31,11 +31,11 @@
      <option value="bus">Bus</option>
     </select>
     
-    <label for="vehicleno">Vehicle-no.</label>
-    <input type="text" name="vehicleno" id="vehicleno" required>
+    <label for="licenceno">Licence-no</label>
+    <input type="text" name="licenceno" id="licenceno" required>
 
-    <label for="pickupdate">Pickup-date</label>
-    <input type="date" name="pickupdate" id="pickupdate" required>
+    <label for="experience">Experience To Drive</label>
+    <input type="text" name="experience" id="experience" required>
 
     <button type="submit">Book Now</button>
    </form>
