--- a/home.html
+++ b/home.html
@@ -18,12 +18,13 @@
           <li class="nav-item"><a href="./about.html">About</a></li>
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
           <li class="nav-item"><a href="./booking.html">Booking</a></li>
+          <li class="nav-item"><a href="./driver.html">For Driver</a></li>
           <li class="nav-item"><a href="./login.html">Login</a></li>
         </ul>
       </div>
     </nav>
     <div class="header-content">
-      <h1 class="lg-heading text-light">Book the vehicle driver</h1>
+      <h1 class="lg-heading text-light main heading">Book the vehicle driver</h1>
       <p class="text-light">Book the vehicle driver, experience the greateness, it,s the best gift given by nature</p>
       <a href="#Explore-Driver" class="btn btn-primary text-red md-heading">Explore driver</a>
     </div>
@@ -36,7 +37,7 @@
           <img src="./bike1.jpg" alt="Image description">
         </div>
         <div class="text-box">
-          <h2 class="lg-heading text-black">BIKE DRIVER</h2>
+          <h2 class="lg-heading text-black">BIKE-DRIVER</h2>
           <p class="text-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, tenetur, eius nesciunt
             atque asperiores sit
             quisquam voluptate consequatur necessitatibus eos cum nostrum illum suscipit doloremque inventore adipisci
@@ -50,7 +51,7 @@
           <img src="./car.jpg" alt="Image description">
         </div>
         <div class="text-box">
-          <h2 class="lg-heading text-black">CAR DRIVER</h2>
+          <h2 class="lg-heading text-black">CAR-DRIVER</h2>
           <p class="text-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus quidem ipsa debitis sit
             beatae in similique,
             excepturi tempore quibusdam, sed perferendis possimus! Ipsa possimus ratione nihil distinctio delectus
@@ -64,7 +65,7 @@
           <img src="./bus1.jpg" alt="Image description">
         </div>
         <div class="text-box">
-          <h2 class="lg-heading text-black">BUS DRIVER</h2>
+          <h2 class="lg-heading text-black">BUS-DRIVER</h2>
           <p class="text-gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas sed saepe consequuntur
             perferendis reiciendis.
             Asperiores nostrum quaerat debitis quod. Illo assumenda quasi sapiente commodi excepturi quam facere totam
@@ -79,7 +80,7 @@
     <div class="box-wrapper">
       <div class="container">
         <div class="box box1">
-          <h2 class="md-heading">Best driver</h2>
+          <h2 class="md-heading">Best-driver</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum aperiam velit dolores quod voluptatum est
             quibusdam perferendis fugiat officia ipsa?</p>
         </div>
