--- a/about.html
+++ b/about.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book The Vehicle Driver</title>
   <link rel="stylesheet" href="home.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+  
   <nav class="navbar bg-dark">
     <div class="container">
       <h1 class="logo lg-heading text-light ">BVD</h1>
@@ -17,6 +19,7 @@
         <li class="nav-item"><a href="./about.html">About</a></li>
         <li class="nav-item"><a href="./contact.html">Contact</a></li>
         <li class="nav-item"><a href="./booking.html">Booking</a></li>
+        <li class="nav-item"><a href="./driver.html">For Driver</a></li>
         <li class="nav-item"><a href="./login.html">Login</a></li>
       </ul>
     </div>
