--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <li class="nav-item"><a href="./about.html">About</a></li>
     <li class="nav-item"><a href="./contact.html">Contact</a></li>
     <li class="nav-item"><a href="./booking.html">Booking</a></li>
+    <li class="nav-item"><a href="./driver.html">For Driver</a></li>
     <li class="nav-item"><a href="./login.html">Login</a></li>
    </ul>
   </div>
